--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
             <span class="content-title">site</span>
             <p class="content-text">
                 Gword is a web app that generates all possible combinations of letters that make up an English word from
-                any set of letters and a specified word length. It is very useful when playing word puzzle games.<br>
+                any set of letters and a specified word length. It is useful for playing word puzzle games.<br>
                 At the moment generating long words would be slow because this requires alot of computing power not available
                 on Heroku free.<br>
                 The backend is written in Go and it utilizes websockets.
